[project]
name = "kakao-aiadvanced-maui-yu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "llmlingua>=0.2.2",
    "openai==1.3.7",
    "promptbench>=0.0.4",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
